# demo-advanced

./: .env.sample  .gitignore  Dockerfile  Jenkinsfile  LICENSE  README.md  ai4-metadata.yml  checkpoint_example.py  dvc.yaml  main-deployment.yaml  metadata.json  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
.dvc/: config
.github/workflows/: publish-model.yml  qc-cov.yml
.sqa/: config.yml  docker-compose.yml  dockerfile
api/: __init__.py  api_v2.py  config.py  fields.py  parsers.py  responses.py  schemas.py  utils.py
api/config/: __init__.py  defaults.ini
data/: .gitignore  transform_data.py
deepaas_full/: README.md  __init__.py  config.py  core.py  utils.py
deepaas_full/data/: make_autoencoder.py  make_convolution.py  make_dataset.py  make_encoded.py
deepaas_full/models/: make_autoencoder.py  make_convolution.py  make_dense2ly.py  mnist_convolution.py  mnist_enc2layers.py  mnist_enc3layers.py  mnist_encoder.py  predict_model.py  register_model.py  set_stage.py  stage_model.py  train_model.py
deepaas_full/visualization/: plot_encoding.py  plot_predictions.py  plot_samples.py
demo_advanced/: README.md  __init__.py  config.py
demo_advanced/data/: make_autoencoder.py  make_convolution.py  make_encoded.py
demo_advanced/models/: make_autoencoder.py  make_convolution.py  make_dense2ly.py  predict_model.py  register_model.py  stage_model.py  train_model.py
demo_advanced/visualization/: plot_encoding.py  plot_predictions.py  plot_samples.py
deployments/: training-main.yaml
docs/: Makefile  conf.py  index.rst  make.bat
docs/diagrams/: flows.drawio
flows/: training.py
mlruns/0/: meta.yaml
mlruns/models/autoencoder_32/: meta.yaml
mlruns/models/autoencoder_32/version-1/: meta.yaml
mlruns/models/autoencoder_64/: meta.yaml
mlruns/models/autoencoder_64/version-1/: meta.yaml
mlruns/models/convolution/: meta.yaml
mlruns/models/convolution/version-1/: meta.yaml
mlruns/models/dense2layers/: meta.yaml
mlruns/models/dense2layers/version-1/: meta.yaml
models/: .gitignore
models/0/: meta.yaml
models/0/076ad437da3e40b686c242a9eb855fee/: meta.yaml
models/0/076ad437da3e40b686c242a9eb855fee/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.git.commit  mlflow.source.name
models/0/11428c08543340edb302f09ab1d4a373/: meta.yaml
models/0/11428c08543340edb302f09ab1d4a373/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.name
models/0/204341605fee4ab99835afe8288c42db/: meta.yaml
models/0/2b9409c8ff6e40efa4509add25d70065/: meta.yaml
models/0/3ffd5d765267426c8370e82610fe51fb/: meta.yaml
models/0/59b34635a3c64307a4f0bdd5c41d167e/: meta.yaml
models/0/bbe3ef9450f747b9a34e99e3f3f43bd3/: meta.yaml
models/0/c66d6ffbe3924d8c8030b0e79cf39e75/: meta.yaml
models/0/da16768c4d5b46cb8ea3e9007cf3ff4e/: meta.yaml
models/0/e08501ef1ef846e8a07d4fb2bc24436a/: meta.yaml
models/autoencoder_32/: MLmodel  conda.yaml  requirements.txt
models/autoencoder_64/: MLmodel  requirements.txt
models/convolution/: MLmodel
models/dense2layers/: MLmodel
models/models/autoencoder_128/: meta.yaml
models/models/autoencoder_32/: meta.yaml
models/models/autoencoder_64/: meta.yaml
models/models/convolution/: meta.yaml
models/models/dense2layers/: meta.yaml
notebooks/: drift-detection.ipynb
src/: README.md  __init__.py
src/deepaas_full/: __init__.py  utils.py
sync/: rclone.conf.sample  sync-folders.sh
tests/: conftest.py  test_deepaas.py  test_predictions.py
tests/data/processed/: t100-dataset.npz
tests/datasets/: t100-dataset.npz  t100-images.npy
tests/models/0/: meta.yaml
tests/models/simple_convolution/: MLmodel  fingerprint.pb  keras_metadata.pb  saved_model.pb
tests/test_metadata/: conftest.py  test_fields.py  test_metadata.py  test_requirements.py
tests/test_predictions/: conftest.py  test_predictions.py  test_requirements.py
tests/test_training/: conftest.py  test_requirements.py  test_training.py
(+165 files in other folders)
