[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "deepaas_full"
authors = [{ name = "Borja Esteban", email = "boressan@outlook.com" }]
description = "DEEPaaS full demo/template."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT License" }
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT",
]
dynamic = ["version", "dependencies"]

[project.urls]
"Homepage" = "https://github.com/"
"Bug Tracker" = "https://github.com/"

[tool.pytest.ini_options]
pythonpath = ["."]
env = ["DATA_PATH=tests/data", "MODELS_PATH=tests/models"]

[tool.setuptools]
packages = ["deepaas_full", "deepaas_full.api"]

[tool.setuptools.package-dir]
"deepaas_full.api" = "api"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { file = "VERSION" }

[project.entry-points."deepaas.v2.model"]
deepaas_full = "deepaas_full.api"
