[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "demo-advanced-api"
authors = [{ name = "Borja Esteban", email = "boressan@outlook.com" }]
description = "DEEPaaS full demo/template."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT License" }
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT",
]
dynamic = ["version", "dependencies"]

[project.urls]
"Homepage" = "https://git.scc.kit.edu/m-team/ai/demo-advanced-api"
"Bug Tracker" = "https://git.scc.kit.edu/m-team/ai/demo-advanced-api/-/issues"

[tool.pytest.ini_options]
pythonpath = ["."]
env = [
    "DEMO_ADVANCED_DATA_URI=tests/data",
    "DEMO_ADVANCED_MODELS_URI=tests/models",
    "MLFLOW_REGISTRY_URI=tests/registry",
]
# Allow test files to share names
# https://docs.pytest.org/en/7.1.x/explanation/goodpractices.html
addopts = "--import-mode=importlib"

[tool.setuptools]
packages = ["demo_advanced", "demo_advanced.api"]

[tool.setuptools.package-dir]
"demo_advanced.api" = "api"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { file = "VERSION" }

[project.entry-points."deepaas.v2.model"]
demo_advanced = "demo_advanced.api"
